# my_projects

./: .gitignore
.github/workflows/: pipeline.yml
RSA_encoder/: BigInteger.cpp  BigInteger.h  CMakeLists.txt  Dockerfile  README.md  RSA.cpp  RSA.h  keys.txt  main.cpp  test_rsa.cpp
pet_project_monitoring/: Dockerfile  docker-compose.yml
pet_project_monitoring/app/: main.py  requirements.txt
pet_project_monitoring/filebeat/: filebeat.yml
pet_project_monitoring/logstash/config/: logstash.yml
pet_project_monitoring/logstash/pipeline/: logstash.conf
